@@ -9,6 +9,9 @@ Enter will spawn player
 WASD, arrows moves him
 Space - jumps
 
+day87:
+- seamless ground textures
+
 day84: 
 - ground
 
